# bazel-playground

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
otherlib/: BUILD.bazel
src/main/java/foo/: Foo.java
testa/: BUILD.bazel  src.go
testb/: BUILD.bazel  src.go
