load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_source")

package(default_visibility = ["//:__subpackages__"])

genrule(
    name = "gen",
    outs = ["gen.go"],
    cmd = """
cat <<EOF > "$@"
package testa

import "github.com/leboncoin/bazel-playground/otherlib"

func FromGeneratedFile() {
	otherlib.Foo()
}
EOF
""",
)

go_source(
    name = "srcs",
    srcs = [
        "src.go",  # A Go source file for package testa
        ":gen",  # A generated Go file for package testa
    ],
    deps = ["//otherlib"],  # A simple Go library dependency
)

#
# Test with a Go library embedding our `go_source` rule target.
#

go_library(
    name = "testa",
    srcs = ["testa.go"],
    embed = [":srcs"],  # Our `go_source` rule target
    importpath = "github.com/leboncoin/bazel-playground/testa",
)
